--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/data?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jackson.serialization.write-dates-as-timestamps=true
-spring.jackson.time-zone=GMT+8
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.deserialization.adjust-dates-to-context-time-zone=false
+spring.jackson.time-zone=Asia/Seoul
